[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = 'src/lib.rs'

[[bin]]
path = 'src/main.rs'
name = 'zero2prod'

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
